Remove Blog. Fix horizontal scrolling of Header.

--- a/my-app/src/TransHeader/TransHeader.scss
+++ b/my-app/src/TransHeader/TransHeader.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 15px;
-  position: absolute;
+  position: fixed;
   width: 100%;
   z-index: 1000;
 }
