--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,2 @@
 html, body {
-  max-width: 100%;
-  overflow-x: hidden; }
+  max-width: 100%; }
